<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fundamentals.academy.ori.londoncityguide.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/london" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/header_image"
            android:text="@string/header_text_string"
            android:textSize="23sp"
            android:textColor="#FFFFFF"
            android:paddingStart="@dimen/basic_padding"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        android:padding="@dimen/basic_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_detail_title"
                android:textColor="@color/titlesColor"
                android:textSize="@dimen/basic_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/title_data_padding"
                android:layout_height="wrap_content"
                android:text="@string/first_details_data"
                android:textColor="@color/dataColor"
                android:textSize="@dimen/basic_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="ltr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_detail_title"
                android:textColor="@color/titlesColor"
                android:textSize="@dimen/basic_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/title_data_padding"
                android:layout_height="wrap_content"
                android:text="@string/second_details_data"
                android:textColor="@color/dataColor"
                android:textSize="@dimen/basic_text_size"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_detail_title"
            android:textColor="@color/titlesColor"
            android:textSize="@dimen/basic_text_size"
            android:layoutDirection="ltr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_details_data"
            android:textColor="@color/dataColor"
            android:textSize="@dimen/paragraph_text_size"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/learn_more_button_text"
        android:id="@+id/learn_more_bt" />

</LinearLayout>
